css 디자인 완료

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./scripts/db.js" defer></script>
+    <script src="./scripts/common.js" defer></script>
     <script src="./scripts/main.js" defer></script>   
     <script src="./scripts/swiper.js" defer></script>
 </head>
@@ -52,10 +53,10 @@
     <main>
         <div class="swiper bnr_swiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide slide1">slide1</div>
-                <div class="swiper-slide slide2">slide2</div>
-                <div class="swiper-slide slide3">slide3</div>
-                <div class="swiper-slide slide4">slide4</div>
+                <div class="swiper-slide slide1"></div>
+                <div class="swiper-slide slide2"></div>
+                <div class="swiper-slide slide3"></div>
+                <div class="swiper-slide slide4"></div>
             </div>
         </div>
         <section id="new_arrival">
@@ -72,15 +73,15 @@
                 </ul>
                 <div class="swiper new_swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide slide1">slide1</div>
-                        <div class="swiper-slide slide2">slide2</div>
-                        <div class="swiper-slide slide3">slide3</div>
-                        <div class="swiper-slide slide4">slide4</div>
-                        <div class="swiper-slide slide5">slide5</div>
-                        <div class="swiper-slide slide6">slide6</div>
-                        <div class="swiper-slide slide7">slide7</div>
-                        <div class="swiper-slide slide8">slide8</div>
-                        <div class="swiper-slide slide9">slide9</div>
+                        <div class="swiper-slide slide1"></div>
+                        <div class="swiper-slide slide2"></div>
+                        <div class="swiper-slide slide3"></div>
+                        <div class="swiper-slide slide4"></div>
+                        <div class="swiper-slide slide5"></div>
+                        <div class="swiper-slide slide6"></div>
+                        <div class="swiper-slide slide7"></div>
+                        <div class="swiper-slide slide8"></div>
+                        <div class="swiper-slide slide9"></div>
                     </div>
                 </div>
                 <div class="swiper-button-prev"></div>
@@ -101,38 +102,38 @@
                 </ul>
                 <div class="swiper week_swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide slide1">slide1</div>
-                        <div class="swiper-slide slide2">slide2</div>
-                        <div class="swiper-slide slide3">slide3</div>
-                        <div class="swiper-slide slide4">slide4</div>
-                        <div class="swiper-slide slide5">slide5</div>
-                        <div class="swiper-slide slide6">slide6</div>
-                        <div class="swiper-slide slide7">slide7</div>
-                        <div class="swiper-slide slide8">slide8</div>
-                        <div class="swiper-slide slide9">slide9</div>
-                        <div class="swiper-slide slide10">slide10</div>
+                        <div class="swiper-slide slide1"></div>
+                        <div class="swiper-slide slide2"></div>
+                        <div class="swiper-slide slide3"></div>
+                        <div class="swiper-slide slide4"></div>
+                        <div class="swiper-slide slide5"></div>
+                        <div class="swiper-slide slide6"></div>
+                        <div class="swiper-slide slide7"></div>
+                        <div class="swiper-slide slide8"></div>
+                        <div class="swiper-slide slide9"></div>
+                        <div class="swiper-slide slide10"></div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
         </section>
         <div class="middle_bnr">
-            <a href="#"><img src="#" alt="서포트 신청하기"></a>
+            <a href="#"><img src="./images/middle_bnr.png" alt="서포트 신청하기"></a>
         </div>
         <section id="trand">
             <h2>funkita's trandy style - 펑키타 최신 트렌드 상품 추천</h2>
             <div class="trand_list">
                 <div class="swiper trand_swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide slide1">slide1</div>
-                        <div class="swiper-slide slide2">slide2</div>
-                        <div class="swiper-slide slide3">slide3</div>
-                        <div class="swiper-slide slide4">slide4</div>
-                        <div class="swiper-slide slide5">slide5</div>
-                        <div class="swiper-slide slide6">slide6</div>
-                        <div class="swiper-slide slide7">slide7</div>
-                        <div class="swiper-slide slide8">slide8</div>
-                        <div class="swiper-slide slide9">slide9</div>
+                        <div class="swiper-slide slide1"></div>
+                        <div class="swiper-slide slide2"></div>
+                        <div class="swiper-slide slide3"></div>
+                        <div class="swiper-slide slide4"></div>
+                        <div class="swiper-slide slide5"></div>
+                        <div class="swiper-slide slide6"></div>
+                        <div class="swiper-slide slide7"></div>
+                        <div class="swiper-slide slide8"></div>
+                        <div class="swiper-slide slide9"></div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
