--- a/index.html
+++ b/index.html
@@ -18,28 +18,73 @@
 </head>
 <body>
     <header>
-        <h1><a href="#"><img src="./images/funkytrunks.png" alt="메인페이지로 돌아가기"></a></h1>
+        <h1><a href="./index.html"><img src="./images/funkytrunks.png" alt="메인페이지로 돌아가기"></a></h1>
         <nav>
             <ul>
                 <li>
                     <a href="#">Man</a>
-                    <ul class="lnb man_lnb"></ul>
+                    <div class="lnb_wrap">
+                        <ul class="lnb man_lnb">
+                            <li>swimwear</li>
+                            <li>ft black</li>
+                            <li>performance</li>
+                            <li>beachwear</li>
+                            <li>underwear</li>
+                            <li>t-shirt</li>
+                        </ul>
+                        <ul class="lnb accessories_lnb">
+                            <li>swimming caps</li>
+                            <li>backpacks</li>
+                            <li>training aids</li>
+                            <li>goggles</li>
+                            <li>towels</li>
+                            <li>water bottle</li>
+                            <li>fun gift ideas</li>
+                            <li>gift vouchers</li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="#">Woman</a>
-                    <ul class="lnb woman_lnb"></ul>
+                    <div class="lnb_wrap">
+                        <ul class="lnb woman_lnb">
+                            <li>swimwear</li>
+                            <li>ft black</li>
+                            <li>performance</li>
+                            <li>beachwear</li>
+                            <li>activewear</li>
+                            <li>underwear</li>
+                            <li>t-shirt</li>
+                        </ul>
+                        <ul class="lnb accessories_lnb">
+                            <li>swimming caps</li>
+                            <li>backpacks</li>
+                            <li>training aids</li>
+                            <li>goggles</li>
+                            <li>towels</li>
+                            <li>water bottle</li>
+                            <li>fun gift ideas</li>
+                            <li>gift vouchers</li>
+                        </ul>
+                    </div>
                 </li>
                 <li><a href="#">Toddlers</a></li>
                 <li>
                     <a href="#">Collection</a>
-                    <ul class="lnb collection_lnb"></ul>
+                    <ul class="lnb collection_lnb">
+                        <li>lookbook</li>
+                        <li>videos</li>
+                    </ul>
                 </li>
                 <li>Support</li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                     <a href="#">Sale</a>
-                    <ul class="lnb sale_lnb"></ul>
+                    <ul class="lnb sale_lnb">
+                        <li>sale</li>
+                        <li>event</li>
+                    </ul>
                 </li>
             </ul>
             <button type="button" id="search"><img src="./images/search.png" alt="검색하기"></button>
@@ -240,7 +285,7 @@
                 <span>4TH FLOOR, 294, JIJOK - RO, YUSEONG - GU, DAEJEON, KOREA</span>
             </div>
             <p>OFFICIAL ON-LINE STORE FUNKITA KOREA.</p>
-            <p>COPYRIGHT (C)FUNKITA KOREA RIGHT RESERVED.<br>본 저작권은 펑키타 코리아에 있으며, 상업적 이용 시 민.형사상 책임을 지게 됩니다.<br>콘텐츠 이용 시 출처를 밝히고(펑키타 코리아 및 www.funkita-korea.com 링크포함 필수) 비상업적인 용도에서만 활용하실 수 있습니다.</p>
+            <p>COPYRIGHT (C)FUNKITA KOREA RIGHT RESERVED.<br>본 저작권은 펑키타 코리아에 있으며, 상업적 이용 시 민,형사상 책임을 지게 됩니다.<br>콘텐츠 이용 시 출처를 밝히고(펑키타 코리아 및 www.funkita-korea.com 링크포함 필수) 비상업적인 용도에서만 활용하실 수 있습니다.</p>
         </div>
     </footer>
 </body>
