--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <button type="button" id="search"><img src="./images/search.png" alt="검색하기"></button>
         </nav>
         <ul class="info">
+            <li class="search_info"><button type="button" id="search_respon"><img src="./images/search.png" alt="검색하기"></button></li>
             <li class="account"><a href="#"><img src="./images/icons/icon001.png" alt="계정 정보"></a></li>
             <li class="cart"><a href="#"><img src="./images/icons/icon002.png" alt="장바구니"></a></li>
             <li class="menu"><a href="#"><img src="./images/icons/icon003.png" alt="메뉴"></a></li>
@@ -277,7 +278,6 @@
                     <span>Mail-Order License</span>
                     <span>2014 - DAEJEON JUNGGU - 0248</span>
                 </div>
-                <div class="mobile"><a href="#">모바일 버전으로 보기</a></div>
                 <div class="kg"><img src="./images/kg.png" alt="kg인증"></div>
             </div>
             <div class="address">
