--- a/index.html
+++ b/index.html
@@ -106,7 +106,21 @@
             </div>
         </div>
         <section id="new_arrival">
-            <h2>new arrival - 신제품</h2>
+            <div class="title_wrap">
+                <h2>new arrival - 신제품</h2>
+                <div class="mobile_cate">
+                    <a href="#"><span>categories</span><img src="./images/down_arrow.png" alt="카테고리"></a>
+                    <ul class="mobile_cate_btn">
+                        <li><a href="#">woman</a></li>
+                        <li><a href="#">man</a></li>
+                        <li><a href="#">girls</a></li>
+                        <li><a href="#">boys</a></li>
+                        <li><a href="#">goggles</a></li>
+                        <li><a href="#">caps</a></li>
+                        <li><a href="#">gear</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="new_list">
                 <ul class="cate_btn">
                     <li><a href="#">woman</a></li>
@@ -135,7 +149,21 @@
             </div>
         </section>
         <section id="weekly_best">
-            <h2>weekly best - 주간 베스트 상품</h2>
+            <div class="title_wrap">
+                <h2>weekly best - 주간 베스트 상품</h2>
+                <div class="mobile_cate">
+                    <a href="#"><span>categories</span><img src="./images/down_arrow.png" alt="카테고리"></a>
+                    <ul class="mobile_cate_btn">
+                        <li><a href="#">woman</a></li>
+                        <li><a href="#">man</a></li>
+                        <li><a href="#">girls</a></li>
+                        <li><a href="#">boys</a></li>
+                        <li><a href="#">goggles</a></li>
+                        <li><a href="#">caps</a></li>
+                        <li><a href="#">gear</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="week_list">
                 <ul class="cate_btn">
                     <li><a href="#">woman</a></li>
