--- a/result.html
+++ b/result.html
@@ -96,7 +96,7 @@
         </div>
         <div class="search_wrap"></div>
         <div class="search_area_wrap">
-            <form action="get" id="search_area">
+            <form action="#" method="get" id="search_area">
                 <input type="text" placeholder="검색어를 입력해주세요 예) 여성 수영복">
                 <button type="button" class="result_search"><img src="./images/search.png" alt="검색"></button>
             </form>
