--- a/buy.html
+++ b/buy.html
@@ -6,7 +6,9 @@
     <title>구매하기 | Funkita</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/buy.css">
     <script src="./scripts/common.js" defer></script>
+    <script src="./scripts/buy.js" defer></script>
 </head>
 <body>
     <header>
@@ -89,7 +91,23 @@
         </ul>
     </header>
     <main>
-        
+        <div class="left">
+            <div class="img_wrap">
+                <img src="./images/new/new001.png" alt="상품이미지">
+            </div>
+            <div class="mobile_comp_info"></div>
+        </div>
+        <div class="right">
+            <h1>Sitting duck</h1>
+            <p>다이아몬드 원피스</p>
+        </div>
+        <div class="search_wrap"></div>
+        <div class="search_area_wrap">
+            <form action="#" method="get" id="search_area">
+                <input type="text" placeholder="검색어를 입력해주세요 예) 여성 수영복">
+                <button type="button" class="result_search"><img src="./images/search.png" alt="검색"></button>
+            </form>
+        </div>
     </main>
     <footer>
         <div class="top">
